--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-	"name": "taskList"
-, "version": "0.0.1"
-, "private": true
-, "dependencies":{
-		"requirejs": "latest"
-	,	"connect" : "2.7.0"
-	}
-, "devDependencies":{
-		"mocha": "latest"
-	,	"chai": "latest"
-	, "grunt" : "latest"
-	, "grunt-exec": "latest"
-	}
-, "scripts": {
-	"grunt": "grunt"
-	}
+  "name": "taskList",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "requirejs": "latest",
+    "connect": "2.7.0"
+  },
+  "devDependencies": {
+    "mocha": "latest",
+    "chai": "latest",
+    "grunt": "latest",
+    "grunt-exec": "latest"
+  },
+  "scripts": {
+    "grunt": "grunt",
+    "start": "node server.js"
+  },
+  "description": "Node-and-Google-API ===================",
+  "main": "Gruntfile.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/froeal01/Node-and-Google-API.git"
+  },
+  "author": "",
+  "license": "BSD-2-Clause",
+  "bugs": {
+    "url": "https://github.com/froeal01/Node-and-Google-API/issues"
+  },
+  "homepage": "https://github.com/froeal01/Node-and-Google-API"
 }
